# KamiBack

./: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml
.claude/commands/: add-api-endpoint.md  add-domain-entity.md  add-usecase.md  add-web-feature.md  ci-feedback.md  init-scaffold.md  review.md
.githooks/: pre-push
.github/workflows/: ci.yml  deploy-pages.yml
api/: CLAUDE.md
api/src/: main.py
api/src/api/: __init__.py
api/src/infrastructure/: html_parser.py  html_parser_test.py
api/src/use_cases/: correct_image.py  (+9 more)
docs/: design-principles.md  environment-notes.md  milestones.md  windows-setup.md
docs/adr/: 001-tech-stack.md  002-module-a-processing-split.md  003-manifest-flow.md  004-scan-ocr-pipeline.md
docs/backlog/: README.md
docs/constraints/: README.md
docs/issues/: README.md
docs/phase-tracking/: P4-module-b-scan-ocr.md
docs/setup/: ndlocr-lite.md
docs/vision-gates/: README.md  VG-1-coordinate-roundtrip.md  VG-2-throughput-comparison.md  VG-3-field-operator-usability.md
domain/: CLAUDE.md
scaffold-templates/: README.md
scaffold-templates/commands/: review.md
scaffold-templates/docs/: backlog.md  constraints-readme.md  design-principles.md  environment-notes.md  issues-readme.md  milestones.md
scaffold-templates/guardrails/: dependency-rules.md  git-hooks.md
scaffold-templates/root/: claude-md.md  progress-md.md
scripts/: kami_ndlocr_bridge.py  kami_ndlocr_bridge_test.py
web/: CLAUDE.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx
(+114 files in other folders)
